--- a/form.html
+++ b/form.html
@@ -1,29 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Immobilier</title>
-<link rel="stylesheet" href="./style_form.html">
-</head>
-<body>
-<div id="app">
-  <!-- Deux images à gauche -->
-  <img src="image1.jpg" alt="Image 1">
-  <img src="image2.jpg" alt="Image 2">
-  
-  <!-- Contenu principal -->
-  <h1>Liste des annonces immobilières</h1>
-  <div id="annonces"></div>
-  <button id="ajouterAnnonce">Ajouter une annonce</button>
-  
-  <!-- Deux images à droite -->
-  <img src="image3.jpg" alt="Image 3">
-  <img src="image4.jpg" alt="Image 4">
-</div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Immobilier</title>
+    <link rel="stylesheet" href="./style_form.css" />
+  </head>
+  <body>
+    <section>
+      <h1>Liste des annonces immobilières</h1>
+      <div class="images">
+        <!-- Deux images à gauche -->
+        <div class="img1-2">
+          <img src="./terrain1.webp" alt="Image 1" />
+          <img src="./appart1 .png" alt="Image 2" />
+        </div>
+        <!-- Deux images à droite -->
+        <div class="img3-4">
+          <img src="./apparte - Copie.jpg" alt="Image 3" />
+          <img src="./appartem - Copie.jpg" alt="Image 4" />
+        </div>
 
-<script src="classes.js"></script>
-<script src="functions.js"></script>
-<script src="app.js"></script>
-</body>
+        <button id="ajouterAnnonce">Ajouter une annonce</button>
+      </div>
+    </section>
+    <!-- Contenu principal -->
+
+    <script src="classes.js"></script>
+    <script src="functions.js"></script>
+    <script src="app.js"></script>
+  </body>
 </html>
