--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
   <header>
     <h1>Log'Action Immobilier</h1>
     <nav>
-      <ul>
+      <ul >
         <li><a href="#">Accueil</a></li>
         <li><a href="#">À vendre</a></li>
         <li><a href="#">À louer</a></li>
-        <li><a href="./form.html">Dépose votre annonce </a></li>
+        <li><a href="./anno.html">Dépose votre annonce </a></li>
       </ul>
     </nav>
   </header>
 
-  <section class="hero">
+  <section class="accueil-1">
     <div class="overlay"></div>
     <div class="content">
       <h2>Bienvenue chez Log'Action immobilier</h2>
       <p>Découvrez notre sélection de biens immobiliers à vendre ou à louer</p>
-      <a href="./anno.html" class="btn">Voir les biens disponibles</a>  
+      <a href="./form.html" class="btn">Voir les biens disponibles</a>  
     </div>
   </section>
 
@@ -40,7 +40,7 @@
       <p>Découvrez nos biens immobiliers disponibles à la location</p>
     </div>
     <div class="feature">
-      <img src="./terasse.png" alt="maison">
+      <img src="./maison.jpg" alt="maison">
       <h3>Service client</h3>
       <p>Nous sommes à votre disposition pour vous accompagner dans vos démarches</p>
     </div>
