--- a/anno.html
+++ b/anno.html
@@ -6,6 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Déposer une annonce immobilière</title>
 <link rel="stylesheet" href="./styce_ann.css">
+<script type="module" src="./script.js"></script>
 </head>
 <body>
 <div id="app">
