--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Page d'accueil - Site Immobilier</title>
   <link rel="stylesheet" href="./style.css">
+  <script type="module" src="./script.js"></script>
+
 </head>
 <body>
   <header>
@@ -45,6 +47,7 @@
       <p>Nous sommes à votre disposition pour vous accompagner dans vos démarches</p>
     </div>
   </section>
+  
 
   <footer>
     <p>&copy; 2024 Site Immobilier. Tous droits réservés.</p>
