--- a/form.html
+++ b/form.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Immobilier</title>
     <link rel="stylesheet" href="./style_form.css" />
+    <script type="module" src="./script.js"></script>
   </head>
   <body>
     <section>
@@ -25,9 +26,5 @@
       </div>
     </section>
     <!-- Contenu principal -->
-
-    <script src="classes.js"></script>
-    <script src="functions.js"></script>
-    <script src="app.js"></script>
   </body>
 </html>
