--- a/anno.html
+++ b/anno.html
@@ -1,16 +1,15 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Déposer une annonce immobilière</title>
-<link rel="stylesheet" href="./styce_ann.css">
-<script type="module" src="./script.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="./styce_ann.css">
 </head>
 <body>
-<div id="app">
   <h1>Déposer votre annonce</h1>
+  <div id="form-groupe">
+    
   <form id="annonceForm">
     <div class="form-group">
       <label for="titre">Titre de l'annonce:</label>
@@ -52,6 +51,7 @@
     </div>
     <button type="submit">Déposer l'annonce</button>
   </form>
+</div>
 </div>
 </body>
 </html>
