--- a/anno.html
+++ b/anno.html
@@ -8,6 +8,9 @@
 </head>
 <body>
   <h1>Déposer votre annonce</h1>
+  <div id="annonces">
+    <!-- ******************* -->
+  </div>
   <div id="form-groupe">
     
   <form id="annonceForm">
@@ -15,18 +18,22 @@
       <label for="titre">Titre de l'annonce:</label>
       <input type="text" id="titre" name="titre" required>
     </div>
+
     <div class="form-group">
       <label for="description">Description:</label>
       <textarea id="description" name="description" rows="4" required></textarea>
     </div>
+
     <div class="form-group">
       <label for="prix">Prix:</label>
       <input type="number" id="prix" name="prix" required>
     </div>
+
     <div class="form-group">
       <label for="adresse">Adresse:</label>
       <input type="text" id="adresse" name="adresse" required>
     </div>
+
     <div class="form-group">
       <label for="typeBien">Type de bien:</label>
       <select id="typeBien" name="typeBien" required>
