--- a/index.html
+++ b/index.html
@@ -1,56 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Page d'accueil - Site Immobilier</title>
-  <link rel="stylesheet" href="./style.css">
-  <script type="module" src="./script.js"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Page d'accueil - Site Immobilier</title>
+    <link rel="stylesheet" href="./style.css" />
+    <script type="module" src="./script.js"></script>
+  </head>
+  <body>
+    <header>
+      <h1>Log'Action Immobilier</h1>
+      <nav>
+        <ul>
+          <li><a href="#">Accueil</a></li>
+          <li><a href="#">À vendre</a></li>
+          <li><a href="#">À louer</a></li>
+          <li><a href="./formulaire.html">Dépose votre annonce </a></li>
+        </ul>
+      </nav>
+    </header>
 
-</head>
-<body>
-  <header>
-    <h1>Log'Action Immobilier</h1>
-    <nav>
-      <ul >
-        <li><a href="#">Accueil</a></li>
-        <li><a href="#">À vendre</a></li>
-        <li><a href="#">À louer</a></li>
-        <li><a href="./anno.html">Dépose votre annonce </a></li>
-      </ul>
-    </nav>
-  </header>
+    <section class="accueil-1">
+      <div class="overlay"></div>
+      <div class="content">
+        <h2>Bienvenue chez Log'Action immobilier</h2>
+        <p>
+          Découvrez notre sélection de biens immobiliers à vendre ou à louer
+        </p>
+        <a href="./annonce.html" class="btn">Voir les biens disponibles</a>
+      </div>
+    </section>
 
-  <section class="accueil-1">
-    <div class="overlay"></div>
-    <div class="content">
-      <h2>Bienvenue chez Log'Action immobilier</h2>
-      <p>Découvrez notre sélection de biens immobiliers à vendre ou à louer</p>
-      <a href="./form.html" class="btn">Voir les biens disponibles</a>  
-    </div>
-  </section>
+    <section class="features">
+      <div class="feature">
+        <img src="./Appart.png" alt="Appartement" />
+        <h3>Biens à vendre</h3>
+        <p>Découvrez nos biens immobiliers disponibles à la vente</p>
+      </div>
+      <div class="feature">
+        <img src="./appart1 .png" alt="Appartement" />
+        <h3>Biens à louer</h3>
+        <p>Découvrez nos biens immobiliers disponibles à la location</p>
+      </div>
+      <div class="feature">
+        <img src="./maison.jpg" alt="maison" />
+        <h3>Service client</h3>
+        <p>
+          Nous sommes à votre disposition pour vous accompagner dans vos
+          démarches
+        </p>
+      </div>
+    </section>
 
-  <section class="features">
-    <div class="feature">
-      <img src="./Appart.png" alt="Appartement">
-      <h3>Biens à vendre</h3>
-      <p>Découvrez nos biens immobiliers disponibles à la vente</p>
-    </div>
-    <div class="feature">
-      <img src="./appart1 .png" alt="Appartement">
-      <h3>Biens à louer</h3>
-      <p>Découvrez nos biens immobiliers disponibles à la location</p>
-    </div>
-    <div class="feature">
-      <img src="./maison.jpg" alt="maison">
-      <h3>Service client</h3>
-      <p>Nous sommes à votre disposition pour vous accompagner dans vos démarches</p>
-    </div>
-  </section>
-  
-
-  <footer>
-    <p>&copy; 2024 Site Immobilier. Tous droits réservés.</p>
-  </footer>
-</body>
+    <footer>
+      <p>&copy; 2024 Site Immobilier. Tous droits réservés.</p>
+    </footer>
+  </body>
 </html>
